--- a/test.html
+++ b/test.html
@@ -84,6 +84,7 @@
         divBe.style.height = Number((inSum.value / 500) / 100*8/12 * sel.value) + Number(inSum.value / 500) + 'px';
       }
     }
+    // lj,fdbk rjvbn
   </script>
 
 </body>
