--- a/test.html
+++ b/test.html
@@ -84,9 +84,8 @@
         divBe.style.height = Number((inSum.value / 500) / 100*8/12 * sel.value) + Number(inSum.value / 500) + 'px';
       }
     }
-   
   </script>
-
+<!-- a;sdflkjasd;flkj -->
 </body>
 
 </html>
