--- a/test.html
+++ b/test.html
@@ -18,32 +18,46 @@
     и&nbsp;произвести кучу других операций. С&nbsp;другой стороны, очень не&nbsp;хочется расставлять все эти значки,
     кавычки и&nbsp;неразрывные пробелы вручную.</p> -->
 
-  <p cladss="ghbdtn">1</p>
-  <p>2</p>
-  <p>3</p>
-  <p>4</p>
-  <p>5</p>
-  <button>go</button>
+  <input type="text"><br><br>
+  <input type="text"><br><br>
+  <input type="text"><br><br>
+
   <script>
-    let elem = document.querySelectorAll('p');
-    let set = new Set;
-    addElemSet(elem);
-    function addElemSet(elem) {
-      for (let key of elem) {
-        key.addEventListener('click', function () {
-          set.add(this);
-          this.style.background = 'green';
-        })
-      }
+    let inputs = document.querySelectorAll('input');
+    let map = new Map;
+    for (let input of inputs) {
+      map.set(input, { values: [], index: -1 });
+
+      input.addEventListener('blur', function () {
+        let { values, index } = map.get(this);
+        values.push(this.value);
+        map.set(this, { values, index: index + 1 })
+
+        this.value = '';
+        console.log(map.get(this));
+      });
+      input.addEventListener('keydown', function (event) {
+        if (event.key == 'ArrowLeft') {
+          let { values, index } = map.get(this);
+
+          if (index > -1) {
+            this.value = values[index];
+            map.set(this, { values, index: index - 1 });
+          }
+          event.preventDefault();
+        }
+        if (event.key == 'ArrowRight') {
+          let { values, index } = map.get(this);
+          if (index < values.length - 1) {
+            this.value = values[index + 1];
+            map.set(this, { values, index: index + 1 });
+          }
+          event.preventDefault();
+        }
+      })
     }
-    let but = document.querySelector('button');
-    but.addEventListener('click', function () {
-      for (let elem of set) {
-        elem.textContent = elem.textContent + '!';
-        elem.style.background = 'none';
-      }
-      set.clear();
-    })
+
+
   </script>
 
 </body>
